--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "nodemon": "1.14.6",
         "url": "0.11.0",
         "angular-route": "1.6.8",
-        "express-fileupload": "0.3.0"
+        "express-fileupload": "0.3.0",
+        "handlebars": "4.0.11"
     }
 }
