--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "angular-route": "1.6.8",
         "express-fileupload": "0.3.0",
         "handlebars": "4.0.11",
-        "express-hbs": "1.0.4"
+        "express-hbs": "1.0.4",
+        "enigma-code": "0.0.11",
+        "body-parser": "1.18.2",
+        "sequelize": "4.31.2",
+        "tedious": "2.1.5"
     }
 }
