--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Software, para el manejo de todos los procesos de la empresa",
     "author": "Oscar Ivan Muñoz Barajas, Slack",
     "homepage": "www.indar.com.mx",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/osmunoz/intranet.git"
@@ -18,6 +18,12 @@
     "scripts": {
         "start": "index.js"
     },
+    "contributors": [
+        {
+            "name": "Oscar Ivan Muñoz Barajas",
+            "email": "osmunoz@indar.com.mx"
+        }
+    ],
     "dependencies": {
         "express": "4.x",
         "angular": "1.6.8",
@@ -39,6 +45,8 @@
         "nodemailer-smtp-transport": "2.7.4",
         "nodemailer-express-handlebars": "2.0.0",
         "multer": "1.3.0",
-        "connect-busboy": "0.0.2"
+        "connect-busboy": "0.0.2",
+        "cookie-parser": "1.4.3",
+        "node-thumbnail": "0.13.0"
     }
 }
