--- a/package.json
+++ b/package.json
@@ -25,28 +25,29 @@
         }
     ],
     "dependencies": {
-        "express": "4.x",
         "angular": "1.6.8",
-        "angular-ui-bootstrap": "2.5.6",
-        "mail": "0.2.3",
-        "nodemailer": "4.4.1",
-        "bootstrap": "3.3.7",
-        "uikit": "3.0.0-beta.35",
-        "nodemon": "1.14.6",
-        "url": "0.11.0",
         "angular-route": "1.6.8",
-        "express-fileupload": "0.3.0",
-        "handlebars": "4.0.11",
-        "express-hbs": "1.0.4",
-        "enigma-code": "0.0.11",
+        "angular-ui-bootstrap": "2.5.6",
         "body-parser": "1.18.2",
-        "sequelize": "4.31.2",
-        "tedious": "2.1.5",
-        "nodemailer-smtp-transport": "2.7.4",
-        "nodemailer-express-handlebars": "2.0.0",
-        "multer": "1.3.0",
+        "bootstrap": "3.3.7",
         "connect-busboy": "0.0.2",
         "cookie-parser": "1.4.3",
-        "node-thumbnail": "0.13.0"
+        "enigma-code": "0.0.11",
+        "express": "4.x",
+        "express-fileupload": "0.3.0",
+        "express-hbs": "1.0.4",
+        "handlebars": "4.0.11",
+        "mail": "0.2.3",
+        "multer": "1.3.0",
+        "node-thumbnail": "0.13.0",
+        "nodemailer": "4.4.1",
+        "nodemailer-express-handlebars": "2.0.0",
+        "nodemailer-smtp-transport": "2.7.4",
+        "nodemon": "1.14.6",
+        "sequelize": "4.31.2",
+        "tedious": "2.1.5",
+        "uikit": "3.0.0-beta.35",
+        "url": "0.11.0",
+        "express-session": "1.15.6"
     }
 }
